packages/base/components/PLP/PLP.module.css
.headerContainer {
    background: linear-gradient(90deg, #f5f5f5, #dce0e1)
}

.header {
    position: relative;
    overflow: hidden;
    min-height: 200px;
    max-width: var(--max-width);
    margin: 0 auto 30px;
    background-color: whitesmoke;
    padding: 30px;
    font-size: 3em;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
}

.headerImage {
    position: absolute;
    right: 0;
    top: -160px;
    width: 570px;
    -webkit-mask-image:-webkit-gradient(linear, right top, left top, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
    mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
}

.products {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
    gap: 30px;
    max-width: var(--max-width);
    margin: 0 auto;
}

.loadingIndicatorContainer {
    grid-column: 2/3;
    text-align: center;
}

